--- a/index.html
+++ b/index.html
@@ -131,6 +131,82 @@
         </ul>
       </section>
     </main>
+    <section>
+      <!-- Our Portfolio -->
+      <h2>Our Portfolio</h2>
+      <ul>
+        <li>
+          <img
+            src=".images/BankApp.jpg"
+            alt="BankApp"
+            width="264"
+            height="260"
+          />
+          <h3>Banking App Interface Concept</h3>
+          <p>App</p>
+        </li>
+        <li>
+          <img src=".images/code.jpg" alt="Code" width="264" height="260" />
+          <h3>Cashless Payment</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            src=".images/ordinator.jpg"
+            alt="ordinator"
+            width="264"
+            height="260"
+          />
+          <h3>Meditation App</h3>
+          <p>App</p>
+        </li>
+        <li>
+          <img
+            src=".images/vouture.jpg"
+            alt="vouture"
+            width="264"
+            height="260"
+          />
+          <h3>Taxi Service</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            scr=".images/portable.jpg"
+            alt="portable"
+            width="264"
+            height="260"
+          />
+          <h3>Screen Illustrations</h3>
+          <p>Design</p>
+        </li>
+        <li>
+          <img
+            src=".images/education.jpg"
+            alt="education"
+            width="264"
+            height="260"
+          />
+          <h3>Online Courses</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img src=".images/colage" alt="colage" width="264" height="260" />
+          <h3>Instagram Stories Concept</h3>
+          <p>Design</p>
+        </li>
+        <li>
+          <img src=".images/fruits.jpg" alt="fruits" width="264" height="260" />
+          <h3>Organic Food</h3>
+          <p>Web Site</p>
+        </li>
+        <li>
+          <img src=".images/coffi.jpg" alt="coffi" width="264" height="260" />
+          <h3>Fresh Coffee</h3>
+          <p>Web Site</p>
+        </li>
+      </ul>
+    </section>
 
     <!-- Footer -->
     <footer>
