--- a/index.html
+++ b/index.html
@@ -4,86 +4,114 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="stylesheet" href=".css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
-    <header>
+  <body class="body">
+    <header class="header">
       <nav>
         <!-- Header -->
-        <a href="./index.html">WebStudio</a>
+        <a class="logo link" href="./index.html">WebStudio</a>
 
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./index.html">Portfolio</a></li>
-          <li><a href="./index.html">Contacts</a></li>
+        <ul class="list">
+          <li><a class="guidance link" href="./index.html">Studio</a></li>
+          <li><a class="guidance link" href="./index.html">Portfolio</a></li>
+          <li><a class="guidance link" href="./index.html">Contacts</a></li>
         </ul>
       </nav>
 
       <!-- Contacts -->
-      <address>
-        <ul>
+      <address class="header-address">
+        <ul class="list">
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a
+              class="header-address-list-item link"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
 
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="header-address-list-item link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
       <!-- Section1 -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
+      <section class="dark-bg">
+        <h1 class="main-text">Effective Solutions for Your Business</h1>
 
-        <button type="button">Order Service</button>
+        <button type="button" class="main-button">Order Service</button>
       </section>
       <!-- Section2 -->
       <section>
-        <h2>Our advantages</h2>
-
-        <ul>
+        <h2 hidden>Our advantages</h2>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="main-second-section">Strategy</h3>
+            <p class="main-second-section-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="main-second-section">Punctuality</h3>
 
-            <p>
+            <p class="main-second-section-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3>Diligence</h3>
+            <h3 class="main-second-section">Diligence</h3>
 
-            <p>
+            <p class="main-second-section-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3>Technologies</h3>
+            <h3 class="main-second-section">Technologies</h3>
 
-            <p>
+            <p class="main-second-section-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
           </li>
         </ul>
       </section>
-      <!-- Section 3 -->
+      <!-- Section3 -->
       <section>
-        <h2>Our Team</h2>
-
-        <ul>
+        <h2 class="main-page-text">What are we doing</h2>
+        <ul class="list">
           <li>
+            <img src="./images/img1.jpg" alt="img1" width="360" height="300" />
+          </li>
+          <li>
+            <img src="./images/img2.jpg" alt="img2" width="360" height="300" />
+          </li>
+          <li>
+            <img src="./images/img3.jpg" alt="img3" width="360" height="300" />
+          </li>
+        </ul>
+      </section>
+      <!-- Section 4 -->
+      <section class="light-br">
+        <h2 class="main-page-text">Our Team</h2>
+
+        <ul class="list">
+          <li class="fourth-section">
             <img
               src="./images/MarkGuerrero.jpg"
               alt="Photo"
@@ -91,22 +119,22 @@
               height="260"
             />
 
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="main-fourth-section">Mark Guerrero</h3>
+            <p class="main-fourth-section-text">Product Designer</p>
           </li>
 
-          <li>
+          <li class="fourth-section">
             <img
               src="./images/TomFord.jpg"
               alt="Photo"
               width="264"
               height="260"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="main-fourth-section">Tom Ford</h3>
+            <p class="main-fourth-section-text">Frontend Developer</p>
           </li>
 
-          <li>
+          <li class="fourth-section">
             <img
               src="./images/CamilaGarcia.jpg"
               alt="Photo"
@@ -114,10 +142,10 @@
               height="260"
             />
 
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="main-fourth-section">Camila Garcia</h3>
+            <p class="main-fourth-section-text">Marketing</p>
           </li>
-          <li>
+          <li class="fourth-section">
             <img
               src="./images/DanielWilson.jpg"
               alt="Photo"
@@ -125,93 +153,19 @@
               height="260"
             />
 
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="main-fourth-section">Daniel Wilson</h3>
+            <p class="main-fourth-section-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <section>
-      <!-- Our Portfolio -->
-      <h2>Our Portfolio</h2>
-      <ul>
-        <li>
-          <img
-            src=".images/BankApp.jpg"
-            alt="BankApp"
-            width="264"
-            height="260"
-          />
-          <h3>Banking App Interface Concept</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img src=".images/code.jpg" alt="Code" width="264" height="260" />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            src=".images/ordinator.jpg"
-            alt="ordinator"
-            width="264"
-            height="260"
-          />
-          <h3>Meditation App</h3>
-          <p>App</p>
-        </li>
-        <li>
-          <img
-            src=".images/vouture.jpg"
-            alt="vouture"
-            width="264"
-            height="260"
-          />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img
-            scr=".images/portable.jpg"
-            alt="portable"
-            width="264"
-            height="260"
-          />
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img
-            src=".images/education.jpg"
-            alt="education"
-            width="264"
-            height="260"
-          />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
-        </li>
-        <li>
-          <img src=".images/colage" alt="colage" width="264" height="260" />
-          <h3>Instagram Stories Concept</h3>
-          <p>Design</p>
-        </li>
-        <li>
-          <img src=".images/fruits.jpg" alt="fruits" width="264" height="260" />
-          <h3>Organic Food</h3>
-          <p>Web Site</p>
-        </li>
-        <li>
-          <img src=".images/coffi.jpg" alt="coffi" width="264" height="260" />
-          <h3>Fresh Coffee</h3>
-          <p>Web Site</p>
-        </li>
-      </ul>
-    </section>
 
     <!-- Footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer-dark-bg">
+      <a class="logo-web link" href="./index.html"
+        >Web<span class="logo-studio"></span> Studio</a
+      >
+      <p class="footer-dark-bg-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
