--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
           </li>
         </ul>
       </section>
+      </main>
       <!-- Section3 -->
       <section>
         <h2 class="main-page-text">What are we doing</h2>
@@ -158,8 +159,111 @@
           </li>
         </ul>
       </section>
-    </main>
+    
+<section>
+        <h1>Portfolio</h1>
 
+        <ul class="list">
+          <li>
+            <button type="button" class="main-button-portfolio">All</button>
+          </li>
+          <li>
+            <button type="button" class="main-button-portfolio">
+              Web Site
+            </button>
+          </li>
+          <li>
+            <button type="button" class="main-button-portfolio">App</button>
+          </li>
+          <li>
+            <button type="button" class="main-button-portfolio">Design</button>
+          </li>
+          <li>
+            <button type="button" class="main-button-portfolio">
+              Marketing
+            </button>
+          </li>
+        </ul>
+    <section>
+      <!-- Our Portfolio -->
+      <h2>Our Portfolio</h2>
+      <ul>
+        <li>
+            <a href="" class="link"></a>
+          <img
+            src=".images/BankApp.jpg"
+            alt="BankApp"
+            width="264"
+            height="260"
+          />
+          <h2 class="project-text">Banking App Interface Concept</h2>
+          <p class="project-card-text">App</p>
+        </li>
+        <li>
+            <a href="" class="link"></a>
+          <img src=".images/code.jpg" alt="telephone" width="264" height="260" />
+          <h2 class="project-text">Cashless Payment</h2>
+          <p class="project-card-text">Marketing</p>
+        </li>
+        <li><a href="" class="link"></a>
+          <img
+            src=".images/ordinator.jpg"
+            alt="ordinator"
+            width="264"
+            height="260"
+          />
+          <h2 class="project-text">Meditation App</h2>
+          <p class="project-card-text">App</p>
+        </li>
+        <li><a href="" class="link"></a>
+          <img
+            src=".images/vouture.jpg"
+            alt="Taxi"
+            width="264"
+            height="260"
+          />
+          <h2 class="project-text">Taxi Service</h2>
+          <p class="project-card-text">Marketing</p>
+        </li>
+        <li><a href="" class="link"></a>
+          <img
+            scr=".images/portable.jpg"
+            alt="Fon"
+            width="264"
+            height="260"
+          />
+          <h2 class="project-text">Screen Illustrations</h2>
+          <p class="project-card-text">Design</p>
+        </li>
+        <li><a href="" class="link"></a>
+          <img
+            src=".images/education.jpg"
+            alt="education"
+            width="264"
+            height="260"
+          />
+          <h2 class="project-text">Online Courses</h2>
+          <p class="project-card-text">Marketing</p>
+        </li>
+        <li><a href="" class="link"></a>
+          <img src=".images/colage" alt="social media" width="264" height="260" />
+          <h2 class="project-text">Instagram Stories Concept</h2>
+          <p class="project-card-text">Design</p>
+        </li>
+        <li><a href="" class="link"></a>
+          <img src=".images/fruits.jpg" alt="fruits" width="264" height="260" />
+          <h2 class="project-text">Organic Food</h2>
+          <p>Web Site</p>
+        </li>
+        <li><a href="" class="link"></a>
+          <img src=".images/coffi.jpg" alt="Coffee" width="264" height="260" />
+          <h2 class="project-text">Fresh Coffee</h2>
+          <p class="project-card-text">Web Site</p>
+        </li>
+      </ul>
+    </section>
+  
+   
     <!-- Footer -->
     <footer class="footer-dark-bg">
       <a class="logo-web link" href="./index.html"
