--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <li>
             <a href="" class="link"></a>
           <img
-            src=".images/bankApp.jpg"
+            src="./images/bankapp.jpg"
             alt="BankApp"
             width="264"
             height="260"
@@ -201,13 +201,13 @@
         </li>
         <li>
             <a href="" class="link"></a>
-          <img src=".images/code.jpg" alt="telephone" width="264" height="260" />
+          <img src="./images/code.jpg" alt="telephone" width="264" height="260" />
           <h2 class="project-text">Cashless Payment</h2>
           <p class="project-card-text">Marketing</p>
         </li>
         <li><a href="" class="link"></a>
           <img
-            src=".images/ordinator.jpg"
+            src="./images/ordinator.jpg"
             alt="ordinator"
             width="264"
             height="260"
@@ -217,7 +217,7 @@
         </li>
         <li><a href="" class="link"></a>
           <img
-            src=".images/vouture.jpg"
+            src="./images/vouture.jpg"
             alt="Taxi"
             width="264"
             height="260"
@@ -227,7 +227,7 @@
         </li>
         <li><a href="" class="link"></a>
           <img
-            scr=".images/portable.jpg"
+            scr="./images/portable.jpg"
             alt="Fon"
             width="264"
             height="260"
@@ -237,7 +237,7 @@
         </li>
         <li><a href="" class="link"></a>
           <img
-            src=".images/education.jpg"
+            src="./images/education.jpg"
             alt="education"
             width="264"
             height="260"
@@ -246,17 +246,17 @@
           <p class="project-card-text">Marketing</p>
         </li>
         <li><a href="" class="link"></a>
-          <img src=".images/colage" alt="social media" width="264" height="260" />
+          <img src="./images/colage" alt="social media" width="264" height="260" />
           <h2 class="project-text">Instagram Stories Concept</h2>
           <p class="project-card-text">Design</p>
         </li>
         <li><a href="" class="link"></a>
-          <img src=".images/fruits.jpg" alt="fruits" width="264" height="260" />
+          <img src="./images/fruits.jpg" alt="fruits" width="264" height="260" />
           <h2 class="project-text">Organic Food</h2>
           <p>Web Site</p>
         </li>
         <li><a href="" class="link"></a>
-          <img src=".images/coffi.jpg" alt="Coffee" width="264" height="260" />
+          <img src="./images/coffi.jpg" alt="Coffee" width="264" height="260" />
           <h2 class="project-text">Fresh Coffee</h2>
           <p class="project-card-text">Web Site</p>
         </li>
