--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <li>
             <a href="" class="link"></a>
           <img
-            src="./images/bankapp.jpg"
+            src="./images/bankApp.jpg"
             alt="BankApp"
             width="264"
             height="260"
