--- a/index.html
+++ b/index.html
@@ -226,8 +226,7 @@
           <p class="project-card-text">Marketing</p>
         </li>
         <li><a href="" class="link"></a>
-          <img
-            scr="./images/portable.jpg"
+          <img scr="./images/portable.jpg"
             alt="Fon"
             width="264"
             height="260"
@@ -246,7 +245,7 @@
           <p class="project-card-text">Marketing</p>
         </li>
         <li><a href="" class="link"></a>
-          <img src="./images/colage" alt="social media" width="264" height="260" />
+          <img src="./images/colage.jpg" alt="social media" width="264" height="260" />
           <h2 class="project-text">Instagram Stories Concept</h2>
           <p class="project-card-text">Design</p>
         </li>
