--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <li>
             <a href="" class="link"></a>
           <img
-            src="./images/bankApp.jpg"
+            src="./images/bankapp.jpg"
             alt="BankApp"
             width="264"
             height="260"
@@ -226,7 +226,7 @@
           <p class="project-card-text">Marketing</p>
         </li>
         <li><a href="" class="link"></a>
-          <img scr="./images/portable.jpg"
+          <img scr="./images/scr.jpg"
             alt="Fon"
             width="264"
             height="260"
