--- a/index.html
+++ b/index.html
@@ -191,17 +191,17 @@
         <li>
             <a href="" class="link"></a>
           <img
-            src="./images/bankapp.jpg"
+            src="./images/bankappp.jpg"
             alt="BankApp"
-            width="264"
-            height="260"
+            width="300"
+            height="360"
           />
           <h2 class="project-text">Banking App Interface Concept</h2>
           <p class="project-card-text">App</p>
         </li>
         <li>
             <a href="" class="link"></a>
-          <img src="./images/code.jpg" alt="telephone" width="264" height="260" />
+          <img src="./images/code.jpg" alt="telephone" width="300" height="360" />
           <h2 class="project-text">Cashless Payment</h2>
           <p class="project-card-text">Marketing</p>
         </li>
@@ -209,8 +209,8 @@
           <img
             src="./images/ordinator.jpg"
             alt="ordinator"
-            width="264"
-            height="260"
+            width="300"
+            height="360"
           />
           <h2 class="project-text">Meditation App</h2>
           <p class="project-card-text">App</p>
@@ -226,10 +226,10 @@
           <p class="project-card-text">Marketing</p>
         </li>
         <li><a href="" class="link"></a>
-          <img scr="./images/scr.jpg"
+          <img scr="./images/telephone.jpg"
             alt="Fon"
-            width="264"
-            height="260"
+            width="300"
+            height="360"
           />
           <h2 class="project-text">Screen Illustrations</h2>
           <p class="project-card-text">Design</p>
@@ -245,17 +245,17 @@
           <p class="project-card-text">Marketing</p>
         </li>
         <li><a href="" class="link"></a>
-          <img src="./images/colage.jpg" alt="social media" width="264" height="260" />
+          <img src="./images/colage.jpg" alt="social media" width="300" height="360" />
           <h2 class="project-text">Instagram Stories Concept</h2>
           <p class="project-card-text">Design</p>
         </li>
         <li><a href="" class="link"></a>
-          <img src="./images/fruits.jpg" alt="fruits" width="264" height="260" />
+          <img src="./images/fruits.jpg" alt="fruits" width="300" height="360" />
           <h2 class="project-text">Organic Food</h2>
           <p>Web Site</p>
         </li>
         <li><a href="" class="link"></a>
-          <img src="./images/coffi.jpg" alt="Coffee" width="264" height="260" />
+          <img src="./images/coffi.jpg" alt="Coffee" width="300" height="360" />
           <h2 class="project-text">Fresh Coffee</h2>
           <p class="project-card-text">Web Site</p>
         </li>
