--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
           <p class="project-card-text">Marketing</p>
         </li>
         <li><a href="" class="link"></a>
-          <img scr="./images/telephone.jpg"
+          <img src="./images/telephone.jpg"
             alt="Fon"
             width="300"
             height="360"
