--- a/index.html
+++ b/index.html
@@ -91,107 +91,103 @@
           </li>
         </ul>
       </section>
-      </main>
-      <!-- Section3 -->
-      <section>
-        <h2 class="main-page-text">What are we doing</h2>
-        <ul class="list">
-          <li>
-            <img src="./images/img1.jpg" alt="img1" width="360" height="300" />
-          </li>
-          <li>
-            <img src="./images/img2.jpg" alt="img2" width="360" height="300" />
-          </li>
-          <li>
-            <img src="./images/img3.jpg" alt="img3" width="360" height="300" />
-          </li>
-        </ul>
-      </section>
-      <!-- Section 4 -->
-      <section class="light-br">
-        <h2 class="main-page-text">Our Team</h2>
+    </main>
+    <!-- Section3 -->
+    <section>
+      <h2 class="main-page-text">What are we doing</h2>
+      <ul class="list">
+        <li>
+          <img src="./images/img1.jpg" alt="img1" width="360" height="300" />
+        </li>
+        <li>
+          <img src="./images/img2.jpg" alt="img2" width="360" height="300" />
+        </li>
+        <li>
+          <img src="./images/img3.jpg" alt="img3" width="360" height="300" />
+        </li>
+      </ul>
+    </section>
+    <!-- Section 4 -->
+    <section class="light-br">
+      <h2 class="main-page-text">Our Team</h2>
 
-        <ul class="list">
-          <li class="fourth-section">
-            <img
-              src="./images/MarkGuerrero.jpg"
-              alt="Photo"
-              width="264"
-              height="260"
-            />
+      <ul class="list">
+        <li class="fourth-section">
+          <img
+            src="./images/MarkGuerrero.jpg"
+            alt="Photo"
+            width="264"
+            height="260"
+          />
 
-            <h3 class="main-fourth-section">Mark Guerrero</h3>
-            <p class="main-fourth-section-text">Product Designer</p>
-          </li>
+          <h3 class="main-fourth-section">Mark Guerrero</h3>
+          <p class="main-fourth-section-text">Product Designer</p>
+        </li>
 
-          <li class="fourth-section">
-            <img
-              src="./images/TomFord.jpg"
-              alt="Photo"
-              width="264"
-              height="260"
-            />
-            <h3 class="main-fourth-section">Tom Ford</h3>
-            <p class="main-fourth-section-text">Frontend Developer</p>
-          </li>
+        <li class="fourth-section">
+          <img
+            src="./images/TomFord.jpg"
+            alt="Photo"
+            width="264"
+            height="260"
+          />
+          <h3 class="main-fourth-section">Tom Ford</h3>
+          <p class="main-fourth-section-text">Frontend Developer</p>
+        </li>
 
-          <li class="fourth-section">
-            <img
-              src="./images/CamilaGarcia.jpg"
-              alt="Photo"
-              width="264"
-              height="260"
-            />
+        <li class="fourth-section">
+          <img
+            src="./images/CamilaGarcia.jpg"
+            alt="Photo"
+            width="264"
+            height="260"
+          />
 
-            <h3 class="main-fourth-section">Camila Garcia</h3>
-            <p class="main-fourth-section-text">Marketing</p>
-          </li>
-          <li class="fourth-section">
-            <img
-              src="./images/DanielWilson.jpg"
-              alt="Photo"
-              width="264"
-              height="260"
-            />
+          <h3 class="main-fourth-section">Camila Garcia</h3>
+          <p class="main-fourth-section-text">Marketing</p>
+        </li>
+        <li class="fourth-section">
+          <img
+            src="./images/DanielWilson.jpg"
+            alt="Photo"
+            width="264"
+            height="260"
+          />
 
-            <h3 class="main-fourth-section">Daniel Wilson</h3>
-            <p class="main-fourth-section-text">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-    
-<section>
-        <h1>Portfolio</h1>
+          <h3 class="main-fourth-section">Daniel Wilson</h3>
+          <p class="main-fourth-section-text">UI Designer</p>
+        </li>
+      </ul>
+    </section>
 
-        <ul class="list">
-          <li>
-            <button type="button" class="main-button-portfolio">All</button>
-          </li>
-          <li>
-            <button type="button" class="main-button-portfolio">
-              Web Site
-            </button>
-          </li>
-          <li>
-            <button type="button" class="main-button-portfolio">App</button>
-          </li>
-          <li>
-            <button type="button" class="main-button-portfolio">Design</button>
-          </li>
-          <li>
-            <button type="button" class="main-button-portfolio">
-              Marketing
-            </button>
-          </li>
-        </ul>
-      
+    <section>
+      <h1>Portfolio</h1>
+
+      <ul class="list">
+        <li>
+          <button type="button" class="main-button-portfolio">All</button>
+        </li>
+        <li>
+          <button type="button" class="main-button-portfolio">Web Site</button>
+        </li>
+        <li>
+          <button type="button" class="main-button-portfolio">App</button>
+        </li>
+        <li>
+          <button type="button" class="main-button-portfolio">Design</button>
+        </li>
+        <li>
+          <button type="button" class="main-button-portfolio">Marketing</button>
+        </li>
+      </ul>
+
       <!-- Our Portfolio -->
       <h2>Our Portfolio</h2>
       <ul>
         <li>
-            <a href="" class="link"></a>
+          <a href="" class="link"></a>
           <img
-            src="./images/bankappp.jpg"
+            src="./images/bankapp.jpg"
             alt="BankApp"
             width="300"
             height="360"
@@ -200,12 +196,18 @@
           <p class="project-card-text">App</p>
         </li>
         <li>
-            <a href="" class="link"></a>
-          <img src="./images/code.jpg" alt="telephone" width="300" height="360" />
+          <a href="" class="link"></a>
+          <img
+            src="./images/code.jpg"
+            alt="telephone"
+            width="300"
+            height="360"
+          />
           <h2 class="project-text">Cashless Payment</h2>
           <p class="project-card-text">Marketing</p>
         </li>
-        <li><a href="" class="link"></a>
+        <li>
+          <a href="" class="link"></a>
           <img
             src="./images/ordinator.jpg"
             alt="ordinator"
@@ -215,18 +217,16 @@
           <h2 class="project-text">Meditation App</h2>
           <p class="project-card-text">App</p>
         </li>
-        <li><a href="" class="link"></a>
-          <img
-            src="./images/vouture.jpg"
-            alt="Taxi"
-            width="264"
-            height="260"
-          />
+        <li>
+          <a href="" class="link"></a>
+          <img src="./images/vouture.jpg" alt="Taxi" width="264" height="260" />
           <h2 class="project-text">Taxi Service</h2>
           <p class="project-card-text">Marketing</p>
         </li>
-        <li><a href="" class="link"></a>
-          <img src="./images/telephone.jpg"
+        <li>
+          <a href="" class="link"></a>
+          <img
+            src="./images/telephone.jpg"
             alt="Fon"
             width="300"
             height="360"
@@ -234,7 +234,8 @@
           <h2 class="project-text">Screen Illustrations</h2>
           <p class="project-card-text">Design</p>
         </li>
-        <li><a href="" class="link"></a>
+        <li>
+          <a href="" class="link"></a>
           <img
             src="./images/education.jpg"
             alt="education"
@@ -244,26 +245,37 @@
           <h2 class="project-text">Online Courses</h2>
           <p class="project-card-text">Marketing</p>
         </li>
-        <li><a href="" class="link"></a>
-          <img src="./images/colage.jpg" alt="social media" width="300" height="360" />
+        <li>
+          <a href="" class="link"></a>
+          <img
+            src="./images/kolage.jpg"
+            alt="social media"
+            width="300"
+            height="360"
+          />
           <h2 class="project-text">Instagram Stories Concept</h2>
           <p class="project-card-text">Design</p>
         </li>
-        <li><a href="" class="link"></a>
-          <img src="./images/fruits.jpg" alt="fruits" width="300" height="360" />
+        <li>
+          <a href="" class="link"></a>
+          <img
+            src="./images/fruits.jpg"
+            alt="fruits"
+            width="300"
+            height="360"
+          />
           <h2 class="project-text">Organic Food</h2>
           <p>Web Site</p>
         </li>
-        <li><a href="" class="link"></a>
+        <li>
+          <a href="" class="link"></a>
           <img src="./images/coffi.jpg" alt="Coffee" width="300" height="360" />
           <h2 class="project-text">Fresh Coffee</h2>
           <p class="project-card-text">Web Site</p>
         </li>
       </ul>
-       </body>
     </section>
-  
-   
+
     <!-- Footer -->
     <footer class="footer-dark-bg">
       <a class="logo-web link" href="./index.html"
@@ -274,5 +286,5 @@
         marketing & growth solutions.
       </p>
     </footer>
- 
+  </body>
 </html>
