--- a/index.html
+++ b/index.html
@@ -186,12 +186,7 @@
       <ul>
         <li>
           <a href="" class="link"></a>
-          <img
-            src="./images/bankapp.jpg"
-            alt="BankApp"
-            width="300"
-            height="360"
-          />
+          <img src="./images/bank.jpg" alt="BankApp" width="300" height="360" />
           <h2 class="project-text">Banking App Interface Concept</h2>
           <p class="project-card-text">App</p>
         </li>
@@ -248,7 +243,7 @@
         <li>
           <a href="" class="link"></a>
           <img
-            src="./images/kolage.jpg"
+            src="./images/colag.jpg"
             alt="social media"
             width="300"
             height="360"
