--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </ul>
       </section>
     </main>
-    <!-- Section3 -->
+    <!-- Section1 -->
     <section>
       <h2 class="main-page-text">What are we doing</h2>
       <ul class="list">
@@ -107,7 +107,7 @@
         </li>
       </ul>
     </section>
-    <!-- Section 4 -->
+    <!-- Section 2 -->
     <section class="light-br">
       <h2 class="main-page-text">Our Team</h2>
 
@@ -159,7 +159,7 @@
         </li>
       </ul>
     </section>
-
+    <!-- <section3 -->
     <section>
       <h1>Portfolio</h1>
 
@@ -180,8 +180,10 @@
           <button type="button" class="main-button-portfolio">Marketing</button>
         </li>
       </ul>
-
-      <!-- Our Portfolio -->
+    </section>
+    <!-- Our Portfolio -->
+    <!-- <section 4 -->
+    <section>
       <h2>Our Portfolio</h2>
       <ul>
         <li>
@@ -274,8 +276,8 @@
     <!-- Footer -->
     <footer class="footer-dark-bg">
       <a class="logo-web link" href="./index.html"
-        >Web<span class="logo-studio"></span> Studio</a
-      >
+        >Web<span class="logo-studio">Studio</span>
+      </a>
       <p class="footer-dark-bg-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
