--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <header class="header">
       <nav>
         <!-- Header -->
-        <a class="logo link" href="./index.html">WebStudio</a>
+        <a class="logo link" href="./index.html"
+          >Web<span class="logo-studio">Studio</span>
+        </a>
 
         <ul class="list">
           <li><a class="guidance link" href="./index.html">Studio</a></li>
