--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <header class="header">
       <nav>
         <!-- Header -->
-        <a class="logo link" href="./index.html"
-          >Web<span class="logo-studio">Studio</span>
-        </a>
 
+        <a class="logo-web link" href="./index.html"
+          >Web<span class="logo-studio" class="accent">Studio</span>
+        </a>
         <ul class="list">
           <li><a class="guidance link" href="./index.html">Studio</a></li>
           <li><a class="guidance link" href="./index.html">Portfolio</a></li>
