--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Header -->
 
         <a class="logo-web link" href="./index.html"
-          >Web<span class="logo" class="accent">Studio</span>
+          >Web<span class="accent">Studio</span>
         </a>
         <ul class="list">
           <li><a class="guidance link" href="./index.html">Studio</a></li>
