--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
     <section>
       <h1>Portfolio</h1>
 
-      <ul class="list">
+      <ul class="main-button-portfolio">
         <li>
           <button type="button" class="main-button-portfolio">All</button>
         </li>
