--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </section>
     <!-- <section3 -->
     <section>
-      <h1>Portfolio</h1>
+      <h1 class="main-fourth-section">Portfolio</h1>
 
       <ul class="main-button-portfolio">
         <li>
