--- a/index.html
+++ b/index.html
@@ -186,12 +186,12 @@
     <!-- Our Portfolio -->
     <!-- <section 4 -->
     <section>
-      <h2>Our Portfolio</h2>
+      <h2 class="main-page-text">Our Portfolio</h2>
       <ul>
         <li>
           <a href="" class="link"></a>
-          <img src="./images/bank.jpg" alt="BankApp" width="300" height="360" />
-          <h2 class="project-text">Banking App Interface Concept</h2>
+          <img src="./images/bank.jpg" alt="BankApp" width="360" height="360" />
+          <h3 class="project-text">Banking App Interface Concept</h3>
           <p class="project-card-text">App</p>
         </li>
         <li>
@@ -199,10 +199,10 @@
           <img
             src="./images/code.jpg"
             alt="telephone"
-            width="300"
+            width="360"
             height="360"
           />
-          <h2 class="project-text">Cashless Payment</h2>
+          <h3 class="project-text">Cashless Payment</h3>
           <p class="project-card-text">Marketing</p>
         </li>
         <li>
@@ -210,16 +210,16 @@
           <img
             src="./images/ordinator.jpg"
             alt="ordinator"
-            width="300"
+            width="360"
             height="360"
           />
-          <h2 class="project-text">Meditation App</h2>
+          <h3 class="project-text">Meditation App</h3>
           <p class="project-card-text">App</p>
         </li>
         <li>
           <a href="" class="link"></a>
-          <img src="./images/vouture.jpg" alt="Taxi" width="264" height="260" />
-          <h2 class="project-text">Taxi Service</h2>
+          <img src="./images/vouture.jpg" alt="Taxi" width="360" height="360" />
+          <h3 class="project-text">Taxi Service</h3>
           <p class="project-card-text">Marketing</p>
         </li>
         <li>
@@ -227,10 +227,10 @@
           <img
             src="./images/telephone.jpg"
             alt="Fon"
-            width="300"
+            width="360"
             height="360"
           />
-          <h2 class="project-text">Screen Illustrations</h2>
+          <h3 class="project-text">Screen Illustrations</h3>
           <p class="project-card-text">Design</p>
         </li>
         <li>
@@ -249,10 +249,10 @@
           <img
             src="./images/colag.jpg"
             alt="social media"
-            width="300"
+            width="360"
             height="360"
           />
-          <h2 class="project-text">Instagram Stories Concept</h2>
+          <h3 class="project-text">Instagram Stories Concept</h3>
           <p class="project-card-text">Design</p>
         </li>
         <li>
@@ -260,16 +260,16 @@
           <img
             src="./images/fruits.jpg"
             alt="fruits"
-            width="300"
+            width="360"
             height="360"
           />
-          <h2 class="project-text">Organic Food</h2>
+          <h3 class="project-text">Organic Food</h3>
           <p>Web Site</p>
         </li>
         <li>
           <a href="" class="link"></a>
-          <img src="./images/coffi.jpg" alt="Coffee" width="300" height="360" />
-          <h2 class="project-text">Fresh Coffee</h2>
+          <img src="./images/coffi.jpg" alt="Coffee" width="360" height="360" />
+          <h3 class="project-text">Fresh Coffee</h3>
           <p class="project-card-text">Web Site</p>
         </li>
       </ul>
