--- a/index.html
+++ b/index.html
@@ -189,80 +189,50 @@
       <h2 class="main-page-text">Our Portfolio</h2>
       <ul>
         <li>
-          <img src="./images/bank.jpg" alt="BankApp" width="360" height="360" />
-          <h3 class="project-text">Banking App Interface Concept</h3>
+          <img src="./images/bank.jpg" alt="BankApp" width="360" />
+          <h3 class="project-text-portfolio">Banking App</h3>
           <p class="project-card-text">App</p>
         </li>
         <li>
           <a href="" class="link"></a>
-          <img
-            src="./images/code.jpg"
-            alt="telephone"
-            width="360"
-            height="360"
-          />
-          <h3 class="project-text">Cashless Payment</h3>
+          <img src="./images/code.jpg" alt="telephone" width="360" />
+          <h3 class="project-text-portfolio">Cashless Payment</h3>
           <p class="project-card-text">Marketing</p>
         </li>
         <li>
-          <img
-            src="./images/ordinator.jpg"
-            alt="ordinator"
-            width="360"
-            height="360"
-          />
-          <h3 class="project-text">Meditation App</h3>
+          <img src="./images/ordinator.jpg" alt="ordinator" width="360" />
+          <h3 class="project-text-portfolio">Meditation App</h3>
           <p class="project-card-text">App</p>
         </li>
         <li>
           <img src="./images/vouture.jpg" alt="Taxi" width="360" height="360" />
-          <h3 class="project-text">Taxi Service</h3>
+          <h3 class="project-text-portfolio">Taxi Service</h3>
           <p class="project-card-text">Marketing</p>
         </li>
         <li>
-          <img
-            src="./images/telephone.jpg"
-            alt="Fon"
-            width="360"
-            height="360"
-          />
-          <h3 class="project-text">Screen Illustrations</h3>
+          <img src="./images/telephone.jpg" alt="Fon" width="360" />
+          <h3 class="project-text-portfolio">Screen Illustrations</h3>
           <p class="project-card-text">Design</p>
         </li>
         <li>
-          <img
-            src="./images/education.jpg"
-            alt="education"
-            width="360"
-            height="360"
-          />
-          <h3 class="project-text">Online Courses</h3>
+          <img src="./images/education.jpg" alt="education" width="360" />
+          <h3 class="project-text-portfolio">Online Courses</h3>
           <p class="project-card-text">Marketing</p>
         </li>
         <li>
           <a href="" class="link"></a>
-          <img
-            src="./images/colag.jpg"
-            alt="social media"
-            width="360"
-            height="360"
-          />
-          <h3 class="project-text">Instagram Stories Concept</h3>
+          <img src="./images/colag.jpg" alt="social media" width="360" />
+          <h3 class="project-text-portfolio">Instagram Stories Concept</h3>
           <p class="project-card-text">Design</p>
         </li>
         <li>
-          <img
-            src="./images/fruits.jpg"
-            alt="fruits"
-            width="360"
-            height="360"
-          />
-          <h3 class="project-text">Organic Food</h3>
-          <p>Web Site</p>
+          <img src="./images/fruits.jpg" alt="fruits" width="360" />
+          <h3 class="project-text-portfolio">Organic Food</h3>
+          <p class="project-card-text">Web Site</p>
         </li>
         <li>
-          <img src="./images/coffi.jpg" alt="Coffee" width="360" height="360" />
-          <h3 class="project-text">Fresh Coffee</h3>
+          <img src="./images/coffi.jpg" alt="Coffee" width="360" />
+          <h3 class="project-text-portfolio">Fresh Coffee</h3>
           <p class="project-card-text">Web Site</p>
         </li>
       </ul>
