--- a/index.html
+++ b/index.html
@@ -94,22 +94,8 @@
         </ul>
       </section>
     </main>
-    <!-- Section1 -->
-    <section>
-      <h2 class="main-page-text">What are we doing</h2>
-      <ul class="list">
-        <li>
-          <img src="./images/img1.jpg" alt="img1" width="360" height="300" />
-        </li>
-        <li>
-          <img src="./images/img2.jpg" alt="img2" width="360" height="300" />
-        </li>
-        <li>
-          <img src="./images/img3.jpg" alt="img3" width="360" height="300" />
-        </li>
-      </ul>
-    </section>
-    <!-- Section 2 -->
+
+    <!-- Section 3 -->
     <section class="light-br">
       <h2 class="main-page-text">Our Team</h2>
 
@@ -161,9 +147,9 @@
         </li>
       </ul>
     </section>
-    <!-- <section3 -->
+    <!-- <section 4 -->
     <section>
-      <h1 class="main-fourth-section">Portfolio</h1>
+      <h2 class="main-fourth-section">Our Portfolio</h2>
 
       <ul class="main-button-portfolio">
         <li>
@@ -182,11 +168,7 @@
           <button type="button" class="main-button-portfolio">Marketing</button>
         </li>
       </ul>
-    </section>
-    <!-- Our Portfolio -->
-    <!-- <section 4 -->
-    <section>
-      <h2 class="main-page-text">Our Portfolio</h2>
+
       <ul>
         <li>
           <img src="./images/bank.jpg" alt="BankApp" width="360" />
