--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
           >Web<span class="accent">Studio</span>
         </a>
         <ul class="list">
-          <li><a class="guidance link" href="./index.html">Studio</a></li>
-          <li><a class="guidance link" href="./index.html">Portfolio</a></li>
-          <li><a class="guidance link" href="./index.html">Contacts</a></li>
+          <li><a href="./index.html" class="guidance link">Studio</a></li>
+          <li><a href="./index.html" class="guidance link">Portfolio</a></li>
+          <li><a href="./index.html" class="guidance link">Contacts</a></li>
         </ul>
       </nav>
 
