--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <nav>
         <!-- Header -->
 
-        <a class="logo-web link" href="./index.html"
+        <a href="./index.html" class="logo-web link"
           >Web<span class="accent">Studio</span>
         </a>
         <ul class="list">
@@ -39,7 +39,7 @@
           </li>
 
           <li>
-            <a class="header-address-list-item link" href="tel:+110001111111"
+            <a href="tel:+110001111111" class="header-address-list-item link"
               >+11 (000) 111-11-11</a
             >
           </li>
