--- a/index.html
+++ b/index.html
@@ -96,54 +96,50 @@
     </main>
 
     <!-- Section 3 -->
-    <section class="light-br">
-      <h2 class="main-page-text">Our Team</h2>
-
-      <ul class="list">
-        <li class="fourth-section">
+    <section class="section-team">
+      <h2 class="section-team-title">Our Team</h2>
+      <ul class="section-team-list">
+        <li class="section-team-item">
           <img
             src="./images/MarkGuerrero.jpg"
             alt="Photo"
             width="264"
             height="260"
           />
-
-          <h3 class="main-fourth-section">Mark Guerrero</h3>
-          <p class="main-fourth-section-text">Product Designer</p>
+          <h3 class="section-team-subtitle">Mark Guerrero</h3>
+          <p class="section-team-text">Product Designer</p>
         </li>
 
-        <li class="fourth-section">
+        <li class="section-team-item">
           <img
             src="./images/TomFord.jpg"
             alt="Photo"
             width="264"
             height="260"
           />
-          <h3 class="main-fourth-section">Tom Ford</h3>
-          <p class="main-fourth-section-text">Frontend Developer</p>
+          <h3 class="section-team-subtitle">Tom Ford</h3>
+          <p class="section-team-text">Frontend Developer</p>
         </li>
 
-        <li class="fourth-section">
+        <li class="section-team-item">
           <img
             src="./images/CamilaGarcia.jpg"
             alt="Photo"
             width="264"
             height="260"
           />
-
-          <h3 class="main-fourth-section">Camila Garcia</h3>
-          <p class="main-fourth-section-text">Marketing</p>
+          <h3 class="section-team-subtitle">Camila Garcia</h3>
+          <p class="section-team-text">Marketing</p>
         </li>
-        <li class="fourth-section">
+        <li class="section-team-item">
           <img
             src="./images/DanielWilson.jpg"
             alt="Photo"
             width="264"
             height="260"
           />
-
-          <h3 class="main-fourth-section">Daniel Wilson</h3>
-          <p class="main-fourth-section-text">UI Designer</p>
+          <h3 class="section-team-subtitle">Daniel Wilson</h3>
+          <p class="section-team-text">UI Designer</p>
         </li>
       </ul>
     </section>
