--- a/index.html
+++ b/index.html
@@ -144,74 +144,109 @@
       </ul>
     </section>
     <!-- <section 4 -->
-    <section>
-      <h2 class="main-fourth-section">Our Portfolio</h2>
 
-      <ul class="main-button-portfolio">
-        <li>
-          <button type="button" class="main-button-portfolio">All</button>
+    <section class="section-portfolio">
+      <h2 class="section-title-portfolio">Our Portfolio</h2>
+      <ul class="section-list-portfolio">
+        <li class="section-item-portfolio">
+          <img
+            src="./images/bank.jpg"
+            class="section-img-bank"
+            alt="Banking App"
+            width="360"
+            height="300"
+          />
+          <h3 class="section-subtitle-portfolio">Banking App</h3>
+          <p class="section-text-portfolio">App</p>
         </li>
-        <li>
-          <button type="button" class="main-button-portfolio">Web Site</button>
+        <li class="section-item-portfolio">
+          <img
+            src="./images/code.jpg"
+            class="section-img-portfolio-code"
+            alt="Cashless Payment"
+            width="360"
+            height="300"
+          />
+          <h3 class="section-subtitle-portfolio">Cashless Payment</h3>
+          <p class="section-text-portfolio">Marketing</p>
         </li>
-        <li>
-          <button type="button" class="main-button-portfolio">App</button>
+        <li class="section-item-portfolio">
+          <img
+            src="./images/ordinator.jpg"
+            class="section-img-portfolio-ordinator"
+            alt="Meditation App"
+            width="360"
+            height="300"
+          />
+          <h3 class="section-subtitle-portfolio">Meditation App</h3>
+          <p class="section-text-portfolio">App</p>
         </li>
-        <li>
-          <button type="button" class="main-button-portfolio">Design</button>
+        <li class="section-item-portfolio">
+          <img
+            src="./images/vouture.jpg"
+            class="section-portfolio-img-vouture"
+            alt="Taxi"
+            width="360"
+            height="300"
+          />
+          <h3 class="section-subtitle-portfolio">Taxi Service</h3>
+          <p class="section-text-portfolio">Marketing</p>
         </li>
-        <li>
-          <button type="button" class="main-button-portfolio">Marketing</button>
+        <li class="section-item-portfolio">
+          <img
+            src="./images/telephone.jpg"
+            class="section-portfolio-img-telephone"
+            alt="Fon"
+            width="360"
+            height="300"
+          />
+          <h3 class="section-subtitle-portfolio">Taxi Service</h3>
+          <p class="section-text-portfolio">Marketing</p>
         </li>
-      </ul>
-
-      <ul>
-        <li>
-          <img src="./images/bank.jpg" alt="BankApp" width="360" />
-          <h3 class="project-text-portfolio">Banking App</h3>
-          <p class="project-card-text">App</p>
+        <li class="section-item-portfolio">
+          <img
+            src="./images/education.jpg"
+            class="section-portfolio-img-education"
+            alt="education"
+            width="360"
+            height="300"
+          />
+          <h3 class="section-subtitle-portfolio">Online Courses</h3>
+          <p class="section-text-portfolio">Marketing</p>
         </li>
-        <li>
+        <li class="section-item-portfolio">
           <a href="" class="link"></a>
-          <img src="./images/code.jpg" alt="telephone" width="360" />
-          <h3 class="project-text-portfolio">Cashless Payment</h3>
-          <p class="project-card-text">Marketing</p>
+          <img
+            src="./images/colag.jpg"
+            class="section-portfolio-img-colag"
+            alt="social media"
+            width="360"
+            height="300"
+          />
+          <h3 class="section-subtitle-portfolio">Instagram Stories Concept</h3>
+          <p class="section-text-portfolio">Design</p>
         </li>
-        <li>
-          <img src="./images/ordinator.jpg" alt="ordinator" width="360" />
-          <h3 class="project-text-portfolio">Meditation App</h3>
-          <p class="project-card-text">App</p>
+        <li class="section-item-portfolio">
+          <img
+            src="./images/fruits.jpg"
+            class="section-portfolio-img-fruits"
+            alt="fruits"
+            width="360"
+            height="300"
+          />
+          <h3 class="section-subtitle-portfolio">Organic Food</h3>
+          <p class="section-text-portfolio">Web Site</p>
         </li>
-        <li>
-          <img src="./images/vouture.jpg" alt="Taxi" width="360" height="360" />
-          <h3 class="project-text-portfolio">Taxi Service</h3>
-          <p class="project-card-text">Marketing</p>
-        </li>
-        <li>
-          <img src="./images/telephone.jpg" alt="Fon" width="360" />
-          <h3 class="project-text-portfolio">Screen Illustrations</h3>
-          <p class="project-card-text">Design</p>
-        </li>
-        <li>
-          <img src="./images/education.jpg" alt="education" width="360" />
-          <h3 class="project-text-portfolio">Online Courses</h3>
-          <p class="project-card-text">Marketing</p>
-        </li>
-        <li>
-          <a href="" class="link"></a>
-          <img src="./images/colag.jpg" alt="social media" width="360" />
-          <h3 class="project-text-portfolio">Instagram Stories Concept</h3>
-          <p class="project-card-text">Design</p>
-        </li>
-        <li>
-          <img src="./images/fruits.jpg" alt="fruits" width="360" />
-          <h3 class="project-text-portfolio">Organic Food</h3>
-          <p class="project-card-text">Web Site</p>
-        </li>
-        <li>
-          <img src="./images/coffi.jpg" alt="Coffee" width="360" />
-          <h3 class="project-text-portfolio">Fresh Coffee</h3>
-          <p class="project-card-text">Web Site</p>
+        <li class="section-item-portfolio">
+          <img
+            src="./images/coffi.jpg"
+            class="section-portfolio-img-coffee"
+            alt="Coffee"
+            width="360"
+            height="300"
+          />
+          <h3 class="section-subtitle-portfolio">Fresh Coffee</h3>
+          <p class="section-text-portfolio">Web Site</p>
         </li>
       </ul>
     </section>
