--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         </a>
         <ul class="list">
           <li><a href="./index.html" class="guidance link">Studio</a></li>
-          <li><a href="./index.html" class="guidance link">Portfolio</a></li>
-          <li><a href="./index.html" class="guidance link">Contacts</a></li>
+          <li><a href="" class="guidance link">Portfolio</a></li>
+          <li><a href="" class="guidance link">Contacts</a></li>
         </ul>
       </nav>
 
@@ -98,7 +98,7 @@
     <!-- Section 3 -->
     <section class="section-team">
       <h2 class="section-team-title">Our Team</h2>
-      <ul class="section-team-list">
+      <ul>
         <li class="section-team-item">
           <img
             src="./images/MarkGuerrero.jpg"
