--- a/index.html
+++ b/index.html
@@ -96,50 +96,50 @@
     </main>
 
     <!-- Section 3 -->
-    <section class="section-team">
-      <h2 class="section-team-title">Our Team</h2>
+    <section class="section-team-name">
+      <h2 class="section-team-title-name">Our Team</h2>
       <ul>
-        <li class="section-team-item">
+        <li class="section-team-item-name">
           <img
             src="./images/MarkGuerrero.jpg"
             alt="Photo"
             width="264"
             height="260"
           />
-          <h3 class="section-team-subtitle">Mark Guerrero</h3>
-          <p class="section-team-text">Product Designer</p>
+          <h3 class="section-team-subtitle-name">Mark Guerrero</h3>
+          <p class="section-team-text-name">Product Designer</p>
         </li>
 
-        <li class="section-team-item">
+        <li class="section-team-item-name">
           <img
             src="./images/TomFord.jpg"
             alt="Photo"
             width="264"
             height="260"
           />
-          <h3 class="section-team-subtitle">Tom Ford</h3>
-          <p class="section-team-text">Frontend Developer</p>
+          <h3 class="section-team-subtitle-name">Tom Ford</h3>
+          <p class="section-team-text-name">Frontend Developer</p>
         </li>
 
-        <li class="section-team-item">
+        <li class="section-team-item-name">
           <img
             src="./images/CamilaGarcia.jpg"
             alt="Photo"
             width="264"
             height="260"
           />
-          <h3 class="section-team-subtitle">Camila Garcia</h3>
-          <p class="section-team-text">Marketing</p>
+          <h3 class="section-team-subtitle-name">Camila Garcia</h3>
+          <p class="section-team-text-name">Marketing</p>
         </li>
-        <li class="section-team-item">
+        <li class="section-team-item-name">
           <img
             src="./images/DanielWilson.jpg"
             alt="Photo"
             width="264"
             height="260"
           />
-          <h3 class="section-team-subtitle">Daniel Wilson</h3>
-          <p class="section-team-text">UI Designer</p>
+          <h3 class="section-team-subtitle-name">Daniel Wilson</h3>
+          <p class="section-team-text-name">UI Designer</p>
         </li>
       </ul>
     </section>
