--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </ul>
       </section>
     </main>
-
+    <!-- section 3 -->
     <section class="section-team-name">
       <h2 class="section-team-title-name">Our Team</h2>
       <ul>
@@ -142,7 +142,7 @@
         </li>
       </ul>
     </section>
-
+    <!-- section 4 -->
     <section class="section-portfolio">
       <h2 class="section-title-portfolio">Our Portfolio</h2>
       <ul class="section-list-portfolio">
