--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <img
               src="./images/MarkGuerrero.jpg"
               alt="Photo"
-              width="264"
+              width="360"
               height="260"
             />
             <h3 class="section-team-subtitle-name">Mark Guerrero</h3>
@@ -113,7 +113,7 @@
             <img
               src="./images/TomFord.jpg"
               alt="Photo"
-              width="264"
+              width="360"
               height="260"
             />
             <h3 class="section-team-subtitle-name">Tom Ford</h3>
@@ -124,7 +124,7 @@
             <img
               src="./images/CamilaGarcia.jpg"
               alt="Photo"
-              width="264"
+              width="360"
               height="260"
             />
             <h3 class="section-team-subtitle-name">Camila Garcia</h3>
@@ -134,7 +134,7 @@
             <img
               src="./images/DanielWilson.jpg"
               alt="Photo"
-              width="264"
+              width="360"
               height="260"
             />
             <h3 class="section-team-subtitle-name">Daniel Wilson</h3>
@@ -209,8 +209,8 @@
               width="360"
               height="300"
             />
-            <h3 class="section-subtitle-portfolio">Online Courses</h3>
-            <p class="section-text-portfolio">Marketing</p>
+            <h3 class="section-subtitle-portfolio">Screen Illustrations</h3>
+            <p class="section-text-portfolio">Design</p>
           </li>
           <li class="section-item-portfolio">
             <a href="" class="link"></a>
