--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
               width="360"
               height="300"
             />
-            <h3 class="section-subtitle-portfolio">Taxi Service</h3>
-            <p class="section-text-portfolio">Marketing</p>
+            <h3 class="section-subtitle-portfolio">Screen Illustrations</h3>
+            <p class="section-text-portfolio">Design</p>
           </li>
           <li class="section-item-portfolio">
             <img
@@ -209,8 +209,8 @@
               width="360"
               height="300"
             />
-            <h3 class="section-subtitle-portfolio">Screen Illustrations</h3>
-            <p class="section-text-portfolio">Design</p>
+            <h3 class="section-subtitle-portfolio">Online Courses</h3>
+            <p class="section-text-portfolio">Marketing</p>
           </li>
           <li class="section-item-portfolio">
             <a href="" class="link"></a>
